# iracing-stats

./: .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  api.py  common.py  db.py  main.py  package-lock.json  schema.sql
.github/workflows/: build.yaml
queries/: car-irating-change.sql  discord-report.sql  first-last-irating.sql  simcube-livery.sql  team-car-usage.sql  team-connections.sql  team-results.sql  total-time.sql  track-irating-change.sql  win-list.sql
scripts/: build.sh  restart-service.sh  run.sh  save-image.sh  upload.sh
server/: .gitignore  Cargo.toml
server/src/: category_type.rs  db.rs  discord_hook.rs  event_type.rs  indices.sql  iracing_client.rs  main.rs  motec_xml.rs  schema.rs  schema.sql  server.rs  sof_calculator.rs
site/: .gitignore  package-lock.json  package.json
site/public/: archive-helper.html  archive-helper.js  index.html  season-standings.html  season-standings.js  track-map-generator.html  track-map-generator.js  website-helper.html  website-helper.js
site/src/: ActivityHistory.js  App.js  CarTrackMatrix.js  CarUsage.js  CategoryReport.js  DriverList.css  DriverList.js  DriverReport.js  DriverStats.css  (+17 more)
src/: category_type.rs  db.rs  dirs.rs  discord_bot.rs  discord_hook.rs  driverid.rs  event_type.rs  indices.sql  iracing_client.rs  main.rs  motec_xml.rs  response_timer.rs  schema.rs  schema.sql  server.rs  server_logger.rs  simsession_type.rs  sof_calculator.rs  website_builder.rs
static/: plot.js  racechart.html  racechart.js  report.css  report.html  report.js
static-data/: site-teams.json  teams.json
(+14 files in other folders)
