[package]
name = "iracing-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
zip = "0.6.3"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
chrono = "0.4.23"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["blocking", "cookies", "json", "serde_json"] }
clap = { version = "4.0.29", features = ["derive"] }