[package]
name = "iracing-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
zip = "0.6.3"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
chrono = "0.4.23"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["blocking", "cookies", "json", "serde_json"] }
clap = { version = "4.0.29", features = ["derive"] }
rocket = { version = "0.5.0-rc.3", features = ["json", "tls"] }
futures = "0.3.25"
lazy_static = "1.4.0"
sea-query = "0.28.3"
sea-query-rusqlite = { version = "0.2.0" }
simple-xml-builder = "1.1.0"
csv = "1.2.1"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "chrono"] }